--- a/orbisat/orbisat_gui/ui/main_window_full.ui
+++ b/orbisat/orbisat_gui/ui/main_window_full.ui
@@ -20,7 +20,7 @@
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="OrbitronRadar" name="radar_widget" native="true">
+   <widget class="OrbisatRadar" name="radar_widget" native="true">
     <property name="geometry">
      <rect>
       <x>5</x>
@@ -35,7 +35,7 @@
      <rect>
       <x>420</x>
       <y>100</y>
-      <width>171</width>
+      <width>172</width>
       <height>33</height>
      </rect>
     </property>
@@ -153,7 +153,7 @@
      <rect>
       <x>420</x>
       <y>130</y>
-      <width>171</width>
+      <width>172</width>
       <height>65</height>
      </rect>
     </property>
@@ -371,7 +371,7 @@
      <rect>
       <x>420</x>
       <y>200</y>
-      <width>171</width>
+      <width>172</width>
       <height>41</height>
      </rect>
     </property>
@@ -480,7 +480,7 @@
      <rect>
       <x>420</x>
       <y>0</y>
-      <width>171</width>
+      <width>178</width>
       <height>21</height>
      </rect>
     </property>
@@ -686,7 +686,7 @@
        <rect>
         <x>0</x>
         <y>0</y>
-        <width>331</width>
+        <width>332</width>
         <height>118</height>
        </rect>
       </property>
@@ -1088,7 +1088,7 @@
       <number>0</number>
      </property>
      <item>
-      <widget class="QLabel" name="orbitron_norad_id_text_label">
+      <widget class="QLabel" name="orbisat_norad_id_text_label">
        <property name="minimumSize">
         <size>
          <width>80</width>
@@ -1107,7 +1107,7 @@
       </widget>
      </item>
      <item>
-      <widget class="QScrollArea" name="orbitron_norad_ids_scroll_area">
+      <widget class="QScrollArea" name="orbisat_norad_ids_scroll_area">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
          <horstretch>0</horstretch>
@@ -1143,7 +1143,7 @@
          <rect>
           <x>0</x>
           <y>0</y>
-          <width>61</width>
+          <width>62</width>
           <height>118</height>
          </rect>
         </property>
@@ -1157,7 +1157,7 @@
      <rect>
       <x>690</x>
       <y>0</y>
-      <width>81</width>
+      <width>87</width>
       <height>141</height>
      </rect>
     </property>
@@ -1301,8 +1301,8 @@
      <rect>
       <x>420</x>
       <y>20</y>
-      <width>171</width>
-      <height>81</height>
+      <width>172</width>
+      <height>83</height>
      </rect>
     </property>
     <layout class="QGridLayout" name="station_info_layout">
@@ -1635,7 +1635,7 @@
      <x>0</x>
      <y>0</y>
      <width>774</width>
-     <height>21</height>
+     <height>37</height>
     </rect>
    </property>
    <widget class="QMenu" name="menu">
@@ -1666,9 +1666,9 @@
  </widget>
  <customwidgets>
   <customwidget>
-   <class>OrbitronRadar</class>
+   <class>OrbisatRadar</class>
    <extends>QWidget</extends>
-   <header>new_orbitron/orbitron_gui/widgets/radar</header>
+   <header>orbisat/orbisat_gui/widgets/radar</header>
    <container>1</container>
   </customwidget>
  </customwidgets>
