--- a/orbisat/orbisat_gui/ui/ground_station_setup_dialog.ui
+++ b/orbisat/orbisat_gui/ui/ground_station_setup_dialog.ui
@@ -24,7 +24,7 @@
    </property>
    <property name="font">
     <font>
-     <family>Calibri</family>
+     <family>.AppleSystemUIFont</family>
      <pointsize>12</pointsize>
      <italic>true</italic>
     </font>
@@ -41,6 +41,11 @@
      <width>211</width>
      <height>121</height>
     </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>10</pointsize>
+    </font>
    </property>
    <layout class="QGridLayout" name="gridLayout">
     <property name="spacing">
@@ -65,6 +70,11 @@
         <width>115</width>
         <height>15</height>
        </size>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>10</pointsize>
+       </font>
       </property>
       <property name="text">
        <string>Station name:</string>
@@ -91,6 +101,11 @@
         <height>20</height>
        </size>
       </property>
+      <property name="font">
+       <font>
+        <pointsize>10</pointsize>
+       </font>
+      </property>
      </widget>
     </item>
     <item row="3" column="0">
@@ -112,6 +127,11 @@
         <width>115</width>
         <height>15</height>
        </size>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>10</pointsize>
+       </font>
       </property>
       <property name="text">
        <string>Elevation, [°]:</string>
@@ -138,6 +158,11 @@
         <height>20</height>
        </size>
       </property>
+      <property name="font">
+       <font>
+        <pointsize>10</pointsize>
+       </font>
+      </property>
      </widget>
     </item>
     <item row="2" column="0">
@@ -159,6 +184,11 @@
         <width>115</width>
         <height>15</height>
        </size>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>10</pointsize>
+       </font>
       </property>
       <property name="text">
        <string>Altitude, [m]:</string>
@@ -185,6 +215,11 @@
         <height>20</height>
        </size>
       </property>
+      <property name="font">
+       <font>
+        <pointsize>10</pointsize>
+       </font>
+      </property>
      </widget>
     </item>
     <item row="0" column="1">
@@ -207,6 +242,11 @@
         <height>20</height>
        </size>
       </property>
+      <property name="font">
+       <font>
+        <pointsize>10</pointsize>
+       </font>
+      </property>
      </widget>
     </item>
     <item row="0" column="0">
@@ -228,6 +268,11 @@
         <width>115</width>
         <height>15</height>
        </size>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>10</pointsize>
+       </font>
       </property>
       <property name="text">
        <string>Longitude, [°]:</string>
@@ -254,6 +299,11 @@
         <height>20</height>
        </size>
       </property>
+      <property name="font">
+       <font>
+        <pointsize>10</pointsize>
+       </font>
+      </property>
      </widget>
     </item>
     <item row="1" column="0">
@@ -275,6 +325,11 @@
         <width>115</width>
         <height>15</height>
        </size>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>10</pointsize>
+       </font>
       </property>
       <property name="text">
        <string>Latitude, [°]:</string>
@@ -312,9 +367,10 @@
    </property>
    <property name="font">
     <font>
-     <pointsize>8</pointsize>
-     <weight>75</weight>
-     <bold>true</bold>
+     <pointsize>12</pointsize>
+     <weight>50</weight>
+     <bold>false</bold>
+     <kerning>false</kerning>
     </font>
    </property>
    <property name="text">
